# QuoteAtlas

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  ATTRIBUTIONS.md  LICENSE-DATA.md  README.md  SECURITY.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  tsconfig.json  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
content-src/: 00-SCHEMA.md  01-international-holidays.md  02a-native-proverbs-uk-vn.md  02b-native-proverbs-jp-kr-cn.md  03-inspirational-quotes.md
data/: allowlist-domains.json
data/holidays/: international.json  tags.json
data/quotes/: en.json  id-map.json  index.json  ja.json  ko.json  vi.json  zh-Hans.json  zh-Hant.json
data/schema/: holiday-override.schema.json  index.schema.json  quote.schema.json
e2e/: background.spec.ts  boot.spec.ts  csp.spec.ts  fixtures.ts  legal.spec.ts  media.spec.ts  quote.spec.ts  region-i18n.spec.ts  resilience.spec.ts
legal/: DISCLAIMER.md  EULA.md  PRIVACY.md  THIRD_PARTY_NOTICES.md
public/: 404.css  404.html  _headers
scripts/: check-i18n-parity.ts  gen-attributions.ts  gen-tz-map.ts  import-content.ts  subset-font.d.ts  subset-fonts.ts  sync-version.ts  validate-data.ts
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  ErrorBoundary.tsx  ErrorView.tsx  UpdateToast.tsx  use-auto-hide.ts  use-fullscreen.ts  use-quote-stack.ts
src/lib/: i18n.ts  (+7 more)
(+74 files in other folders)
